Issue #1891 - normalize z-index

--- a/webcompat/static/css/src/notification-bar.css
+++ b/webcompat/static/css/src/notification-bar.css
@@ -1,6 +1,6 @@
 .notification-bar {
   position: fixed;
-  z-index: 3101;
+  z-index: 2000;
   top: 0;
   left: 0;
   right: 0;
